# gbrain_rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_EN.md
.zread/wiki/drafts/: wiki.json
docs/: compare_report.md  compare_report_en.md  module_detail.md  module_detail_en.md  环境变量设置参考.toml
skills/: RESOLVER.md  _brain-filing-rules.json  _brain-filing-rules.md  _output-rules.md  manifest.json
skills/artifact-review/: SKILL.md
skills/autopilot/: SKILL.md
skills/brain-ops/: SKILL.md
skills/citation-fixer/: SKILL.md
skills/code-graph/: SKILL.md
skills/conventions/: brain-first.md  quality.md
skills/daily-task-manager/: SKILL.md
skills/delete-restore/: SKILL.md
skills/enrich/: SKILL.md
skills/idea-ingest/: SKILL.md
skills/ingest/: SKILL.md
skills/kb-ops/: SKILL.md
skills/meeting-ingestion/: SKILL.md
skills/migrate/: SKILL.md
skills/promotion/: SKILL.md
skills/query/: SKILL.md
skills/repo-architecture/: SKILL.md
skills/reports/: SKILL.md
skills/writing-mode/: SKILL.md
src/: autopilot.rs  backoff.rs  budget.rs  code_index.rs  completeness.rs  config.rs  embedding.rs  engine.rs  enrichment.rs  error.rs  fail_improve.rs  file_storage.rs  jobs.rs  lib.rs  link_extraction.rs  lint.rs  llm.rs  logging.rs  markdown.rs  operations.rs  progress.rs  resolver.rs  runtime.rs  scaffold.rs  schema.rs  security.rs  sqlite_engine.rs  sync.rs  transcription.rs  types.rs  validators.rs  writer.rs
src/artifact/: mod.rs  projection.rs  promotion.rs  provenance.rs  query.rs  query_cache.rs  review.rs  routing.rs  service.rs  store.rs  types.rs  upload.rs
src/chunker/: llm.rs  mod.rs  page.rs  recursive.rs  semantic.rs  tree_sitter.rs
src/kb/: augment.rs  backup.rs  cache.rs  chinese.rs  context.rs  cost.rs  embedding_index.rs  engine.rs  eval.rs  granularity.rs  health.rs  jobs.rs  lifecycle.rs  metadata.rs  mod.rs  ocr.rs  ocr_detector.rs  ocr_glm.rs  ocr_merge.rs  ocr_pdf_splitter.rs  ocr_planner.rs  ocr_provider.rs  ocr_response.rs  passage.rs  pipeline.rs  planner.rs  privacy.rs  queue.rs  rerank.rs  search.rs  security.rs  sync.rs  synonyms.rs  table_index.rs  temp_guard.rs  token_counter.rs  types.rs  worker.rs
src/kb/parser/: csv.rs  docx.rs  embedded_media.rs  html.rs  markdown.rs  mod.rs  pdf.rs  text.rs  xlsx.rs
src/kb/raptor/: kmeans.rs  mod.rs
src/kb/splitter/: adaptive.rs  markdown_header.rs  mod.rs  recursive.rs  semantic.rs
src/mcp/: mod.rs  tool_defs.rs
src/nlp/: chinese.rs  mod.rs
src/search/: dedup.rs  eval.rs  expansion.rs  fuzzy.rs  hybrid.rs  intent.rs  keyword.rs  mod.rs  two_pass.rs  vector.rs
tests/: artifact_facade_test.rs  dedup_test.rs  engine_test.rs  fuzzy_test.rs  search_test.rs
