[package]
name = "gbrain-core"
version = "0.1.0"
edition = "2021"
description = "Personal knowledge brain — Rust core engine with SQLite + sqlite-vec + FTS5"
license = "MIT"

[[bin]]
name = "gbrain"
path = "src/bin/gbrain.rs"

[dependencies]
# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime (for CLI/MCP layer, engine itself is sync)
tokio = { version = "1", features = ["full"] }

# HTTP client (embedding API + query expansion)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "blocking"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Text processing
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
unicode-normalization = "0.1"

# Hashing + MIME
sha2 = "0.10"
infer = "0.16"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "2"

# Home directory resolution
dirs = "6"

# YAML frontmatter parsing
serde_yaml = "0.9"

# Tree-sitter for AST-based code chunking
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"

# KB document parsing
lopdf = "0.34"
zip = "2"
quick-xml = "0.37"
calamine = "0.26"
csv = "1"
html2text = "0.13"
pulldown-cmark = "0.12"

# KB Chinese NLP
jieba-rs = "0.7"
pinyin = "0.10"

# KB random (KMeans++)
rand = "0.8"

# KB hex encoding
hex = "0.4"

# Base64 encoding (OCR PDF上传)
base64 = "0.22"

# Optional: HTTP file server
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }

[features]
default = []
file-server = ["axum", "tower-http"]

[dev-dependencies]
tempfile = "3"